public_html/css/shared.css
/* ====== Start global CSS ====== */

html {
  font-family: Elena,-apple-system,BlinkMacSystemFont,Roboto,roboto slab,droid serif,segoe ui,system-ui,Arial,sans-serif;
}

a,
button,
h1,
h2,
h3 {
  font-family: monospace;
  color: #333;
}

p,
li,
pre {
  font-family: Elena,-apple-system,BlinkMacSystemFont,Roboto,roboto slab,droid serif,segoe ui,system-ui,Arial,sans-serif;
  font-size: calc(.35842vw + .95296em);
  line-height: calc(1.5em + .2vw);

  overflow-wrap: break-word;
  word-wrap: break-word;
  color: #333;
}

.default-text {
  font-family: Elena,-apple-system,BlinkMacSystemFont,Roboto,roboto slab,droid serif,segoe ui,system-ui,Arial,sans-serif;
  font-size: calc(.35842vw + .95296em);
  line-height: calc(1.5em + .2vw);

  overflow-wrap: break-word;
  word-wrap: break-word;
  color: #333;
}

.bold {
  font-weight: 700;
}

.underline {
  text-decoration: underline;
}

.justify-text {
  text-align: justify;
}

.title {
  margin-top: 0;
  padding-top: 42px;
  
  font-weight: 200;
  color: 1f1f1f;
  font-size: 36px;
  font-family: monospace;
}

.sub-title {
  padding-bottom: 9px;

  border-bottom: 1px solid #1f1f1f;
  color: 1f1f1f;
  font-size: 24px;
  font-weight: 600;
  font-family: monospace;
}

.top-level-container {
  /* Prefer margin to padding so sub-elements can use 100% of div space */
  margin-left: 10%;
  margin-right: 10%;
  
  margin-top: 12px;
  margin-bottom: 12px;
  border-radius: 6px;
}

/* ====== End global CSS ====== */
/* ====== Start page_header.php CSS ====== */

.page-header-title {
  /* We want the buttons next to the title */
  display: inline-block;
  
  /*Make sure this is the same for .page-header-buttons */
  padding-top: 42px;
}

.page-header-buttons {
  display: inline-block;
  float: right;
  
  /* Remove default list styles for top and left */
  padding-left: 0;
  margin-top: 0;
  
  /*Make sure this is the same for .page-header-title */
  padding-top: 42px;
}

.page-header-buttons > li {
  display: inline-block;
  width: 125px;
  
  /* Push buttons to right side of the page */
  float: right;
  
  /* Space between each button */
  margin-left: 9px;
}

.page-header-buttons > li > a > button {
  width: 100%;
  color: white;
  font-weight: 700;
  border-radius: 6px;
  border: 1px solid white;
  
  /* Top and bottom = 9px, bottom = 0px because we are fixing the width */
  padding: 9px 0;
  font-size: 21px;
}

.header-tagline {
  font-family: monospace;
  margin-top: 0;
}

/* ====== End page_header.php CSS ====== */
/* ====== Start legal_disclaimer.php CSS ====== */

.legal-disclaimer {
  /* Top right bottom left */
  padding: 18px 60px 18px 60px;

  text-align: center; 
  background-color: rgb(200, 200, 200);
  border-radius: 3px;
}

.legal-disclaimer-heading {
  font-size: 36px;
  font-weight: 600;
  text-transform: uppercase;
}

/* ====== End legal_disclaimer.php CSS ====== */
/* Start tutorial_navigation.php CSS */

.tutorial-navigation {
  display: flex;
  
  /* No space horizontal between button edges and parent container */
  justify-content: space-between;
}

/* Parent (.tutorial-navigation) is flexbox so these buttons are flex items */
.tutorial-navigation-button {
  width: 200px;
  padding-top: 15px;
  padding-bottom: 15px;
  
  border-radius: 6px;
  border: 1px solid white;
  font-weight: 700;
  color: white;
  font-size: 18px;
}



/* End tutorial_navigation.php CSS */
/* Start terminal_text.php CSS */

.terminal-text-container {
  background-color: black;
  border-radius: 6px;
  overflow: hidden;
}

.terminal-text,
.terminal-prompt {
  display: inline-block;
  overflow: hidden;
}

.terminal-prompt p {
  font-family: monospace;
  color: #2777ff;
  padding-left: 18px;
}

/* Terminal typing animation */
.terminal-text p {
  font-family: monospace;
  color: white;
  
  /* Ensures the content is not revealed until the animation */
  overflow: hidden;
  
   /* The terminal cursor */
  border-right: .15em solid white;
  
  /* Keeps the content on a single line */
  white-space: nowrap;
  letter-spacing: .15em;
  animation: 
    typing 3.5s steps(30, end),
    blink-caret .5s step-end infinite;
}

/* The typing effect */
@keyframes typing {
  from { width: 0 }
  to { width: 100% }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from, to { border-color: transparent }
  50% { border-color: white }
}

/* End terminal_text.php CSS */
/* Start generatable.css */

.technology-tag {
  display: inline-block;
  margin-right: 9px;
  margin-bottom: 9px;
}

.tag {
  font-family: monospace;
  color: white;
  font-size: 21px;
  padding: 9px;
  font-weight: 700;
  border-radius: 6px;
}

/* End generatable.css */

